--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-hello,world!
-
-
-m2maomao
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
+	<title>m2maomao's github</title>
+</head>
+<body>
+<h2>Some intro for github</h2>
+<h5>2017/08/28</h5>
+</body>
+</html>
